--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.chris.badonkatrunk" >
 
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="27" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
